--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
   <!-- navegador -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary"> -->
+  <nav class="navbar">
     <div class="container-fluid">
       <a
         href="/"
@@ -21,115 +22,107 @@
       <button type="button" class="btn btn-outline-secondary">Your Cart</button>
     </div>
   </nav>
+  <!--main general-->
+  <main class="mainContainer">
+    <!--aside-->
+    <aside class="left-menu">
+      <div class="buttonsContainer">
+        <button type="button" class="btn btn-secondary">Filter</button>
+        <button type="button" class="btn btn-secondary">Reset Filter</button>
+      </div>
+      <div class="menuContainer">
+        <h4>Products</h4>
+        <ul>
+          <li *ngFor="let product of prodJson; let index = index">
+            <a>
+              <button class="btn" (click)="cambioProducto(product)">
+                {{ product.product }}</button
+              ><span>></span></a
+            >
+          </li>
+          <!--
+          <li>
+            <a href="#"> Product 1 <span>></span></a>
+          </li>
+          <li>
+            <a href="#"> Product 2 <span>></span></a>
+          </li>
+          <li>
+            <a href="#"> Product 3 <span>></span></a>
+          </li>
+          <li>
+            <a href="#"> Product 4 <span>></span></a>
+          </li>
+          <li>
+            <a href="#"> Product 5 <span>></span></a>
+          </li>
+          <li>
+            <a href="#"> Product 6 <span>></span></a>
+          </li>-->
+        </ul>
+      </div>
+    </aside>
+    <!--seccion derecha-->
+    <section class="content">
+      <!--arriba-->
+      <div class="mainProduct">
+        <div class="imagenProd">image placeholder</div>
+        <div class="contenidoProd">
+          <h4>{{ pSeleccion.product }}</h4>
+          <h6>
+            {{ pSeleccion.rating }}
+            * reviews
+          </h6>
 
-  <!--centro-->
-  <section>
-    <!--seccion 1 izq-->
-    <div class="row">
-      <div class="col 6">
-        <img src="..." class="img-thumbnail" alt="..." />
-      </div>
-      <!--seccion 1 drch-->
-      <div class="col 6">
-        <div class="col 6">
-          <h4>Product title</h4>
-        </div>
-        <div class="col 6">
-          <p>$1232</p>
-        </div>
-        <div class="col 6">
-          <p>
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-            archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar
-            de las industrias desde el año 1500, cuando un impresor (N. del T.
-            persona que se dedica a la imprenta) desconocido usó una galería de
-            textos y los mezcló de tal manera que logró hacer un libro de textos
-            especimen
+          <hr />
+          <h4>$ {{ pSeleccion.price }}</h4>
+          <hr />
+          <p class="descriptionPd">
+            {{ pSeleccion.description }}
           </p>
-        </div>
-        <div class="col 6">
-          <button type="button" class="btn btn-secondary">Delete Item</button>
+          <hr />
+          <div class="buttonsContainer">
+            <button type="button" class="btn btn-secondary">Delete Item</button>
+          </div>
         </div>
       </div>
-    </div>
-    <!--seccion 2 -->
-    <div class="row">
-      <div class="col 12">
-        <!--seccion 2 titulo-->
-        <div class="col 12">
-          <h4>Similar title</h4>
-        </div>
-        <!--seccion 2 contenedor-->
-        <div class="row align-items-md-stretch">
-          <!--seccion 2 izq-->
-          <div class="col-md-6">
-            <div>
-              <img id="ImgS2" src="http://lorempixel.com/300/200/" />
-              <div>
-                <div>prueba textos</div>
-                <div>prueba textos</div>
-                <div>prueba textos</div>
-              </div>
-            </div>
-          </div>
-          <!--seccion 2 drch-->
-          <div class="col-md-6">
-            <div>
-              <img id="ImgS2" src="http://lorempixel.com/300/200/" />
-              <div>
-                <div>prueba textos</div>
-                <div>prueba textos</div>
-                <div>prueba textos</div>
-              </div>
+      <!--centro-->
+      <div class="similarProd">
+        <h4>Similar Products</h4>
+        <div class="contenedorSimilar">
+          <div
+            class="similarprodItem"
+            *ngFor="let similarProducts of pSeleccion.similarProducts"
+          >
+            <div class="imagenSimilar">image placeholder</div>
+            <div class="descSimilar">
+              <h5>{{ similarProducts.product }}</h5>
+              <h6>{{ similarProducts.rating }}</h6>
+              <h6>${{ similarProducts.price }}</h6>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <!--seccion 3 -->
-    <p>Este es el contenido seccion 3 de la página.</p>
-  </section>
-  <!--aside-->
-  <aside>
-    <div class="d-grid gap-2 col-6 mx-auto">
-      <button class="btn btn-primary" type="button">Filter</button>
-      <button class="btn btn-primary" type="button">Reset Filter</button>
-    </div>
-    <h5 class="text">Products</h5>
-    <ul>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 1</button>
+      <!--abajo-->
+      <div class="reviews">
+        <h4>Reviews</h4>
+        <div class="reviewItem" *ngFor="let review of pSeleccion.reviews">
+          <div class="avatar">
+            <p>foto</p>
+          </div>
+          <div class="userInfo">
+            <p class="userName">{{ review.name }}</p>
+            <p class="date">{{ review.date }}</p>
+            <p class="star">{{ review.raging }}</p>
+          </div>
+          <div class="reviewText">
+            <p>
+              {{ review.opinion }}
+            </p>
+          </div>
         </div>
-      </li>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 2</button>
-        </div>
-      </li>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 3</button>
-        </div>
-      </li>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 4</button>
-        </div>
-      </li>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 5</button>
-        </div>
-      </li>
-      <li class="prod">
-        <div class="d-grid gap-2">
-          <button type="button">Product 6</button>
-        </div>
-      </li>
-    </ul>
-    <p>Este es el contenido aside de la página.</p>
-  </aside>
-  <!--footer-->
-  <footer><p>Este es el pie de página</p></footer>
+        <hr />
+      </div>
+    </section>
+  </main>
 </body>
