--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,27 +1,122 @@
-aside {
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.navbar {
+  border: 1px solid rgb(188, 186, 186);
+}
+.nav-link {
+  color: black;
+}
+.mainContainer {
+  display: flex;
+  flex-grow: 1;
+}
+.left-menu {
+  display: flex;
+  flex-direction: column;
   width: 20%;
-  float: left;
-  background-color: #e0e0e0;
-  border-left: 1px solid white;
-  padding: 0.1em;
-}
-section {
-  width: 80%;
-  float: right;
-}
-btn btn-outline-secondary {
-  --bs-btn-padding-y: 0.25rem;
-  --bs-btn-padding-x: 0.5rem;
-}
-footer {
-  clear: both;
-  text-align: center;
-  background-color: #cfd8dc;
+  height: 100%;
+  gap: 3em;
+
+  .buttonsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 60%;
+    padding-top: 2em;
+    padding-left: 2em;
+  }
+  .menuContainer {
+    padding: 0 2em;
+    ul {
+      list-style: none;
+      padding: 0;
+      li {
+        border-bottom: 0.5px solid gray;
+        padding: 0.5em 0;
+        a {
+          display: flex;
+          justify-content: space-between;
+          text-decoration: none;
+          width: 100%;
+          color: black;
+          span {
+            margin-left: auto;
+          }
+        }
+      }
+    }
+  }
 }
 
-ul {
-  list-style: none;
-}
-#ImgS2 {
-  float: left;
+.content {
+  width: 80%;
+  height: 100%;
+  .mainProduct {
+    display: flex;
+    width: 100%;
+    height: 40%;
+    border: 1px solid rgb(188, 186, 186);
+    .imagenProd {
+      display: flex;
+      width: 40%;
+      flex-grow: 1;
+      background-color: grey;
+    }
+    .contenidoProd {
+      display: flex;
+      flex-direction: column;
+      width: 60%;
+      padding: 3em 2em;
+      hr {
+        margin: 1.5em 0em;
+        &:last-of-type {
+          width: 25%;
+        }
+      }
+      .descriptionPd {
+        line-height: 1.8;
+      }
+    }
+  }
+
+  .similarProd {
+    display: flex;
+    flex-direction: column;
+    height: 15%;
+    width: 100%;
+    padding: 3em;
+    text-align: center;
+    border: 1px solid rgb(188, 186, 186);
+    .contenedorSimilar {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      .similarprodItem {
+        display: flex;
+        gap: 2em;
+        text-align: left;
+        .imagenSimilar {
+          background-color: grey;
+        }
+        .descSimilar {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+  }
+
+  .reviews {
+    display: column;
+    height: 35%;
+    padding: 3em;
+    border: 1px solid rgb(188, 186, 186);
+    .reviewItem {
+      display: flex;
+      gap: 2em;
+    }
+  }
 }
