--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,10 @@ body {
 }
 .navbar {
   border: 1px solid rgb(188, 186, 186);
+  input {
+    size: 15;
+    max-lines: 30;
+  }
 }
 .nav-link {
   color: black;
@@ -62,6 +66,7 @@ body {
     .imagenProd {
       display: flex;
       width: 40%;
+      height: 300px;
       flex-grow: 1;
       background-color: grey;
     }
@@ -76,7 +81,8 @@ body {
           width: 25%;
         }
       }
-      .descriptionPd {
+
+      s .descriptionPd {
         line-height: 1.8;
       }
     }
@@ -101,6 +107,12 @@ body {
         .imagenSimilar {
           background-color: grey;
         }
+        .ImageSim {
+          display: flex;
+          flex-direction: column;
+          height: 75px;
+          width: 75px;
+        }
         .descSimilar {
           display: flex;
           flex-direction: column;
@@ -118,5 +130,8 @@ body {
       display: flex;
       gap: 2em;
     }
+  }
+  .estrellaYellow {
+    color: yellow;
   }
 }
