--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,86 +3,6 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-.navbar {
-  border: 1px solid rgb(188, 186, 186);
-  input {
-    size: 15;
-    max-lines: 30;
-  }
-  #logo {
-    width: 8%;
-    height: 8%;
-  }
-  .navlink {
-    color: black;
-    border-left: 2px;
-  }
-
-  .menuContainer {
-    padding: 0 2em;
-  }
-  .buttonsContainer {
-    width: 100%;
-    padding-top: 2em;
-    padding-left: 2em;
-  }
-}
-
-.main {
+.centro {
   display: flex;
-}
-#aside {
-  width: 20%;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  li {
-    padding: 0.5em 0;
-    a {
-      display: flex;
-      justify-content: space-between;
-      text-decoration: none;
-      width: 100%;
-      color: black;
-      font-size: 18px;
-      font-family: "Lucida Console";
-      span {
-        margin-left: auto;
-        font-size: 18px;
-        font-family: "Lucida Console";
-      }
-    }
-  }
-}
-#pSelec {
-  width: 70%;
-}
-.imagenProd {
-  display: flex;
-  width: 100%;
-  height: 500px;
-  flex-grow: 1;
-  background-color: grey;
-}
-
-.descriptionPd {
-  line-height: 1.8;
-}
-
-#ImageSim {
-  height: 200px;
-  width: 200px;
-}
-#avatar {
-  height: 80px;
-  width: 80px;
-}
-#rFont {
-  font-size: 20px;
-  font-family: "Lucida Console";
-}
-.estrellaYellow {
-  color: yellow;
 }
