proyecto 3 acabado bien

--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -37,7 +37,7 @@
       <ul>
         <li *ngFor="let product of productosFiltrado; let index = index">
           <a>
-            <button class="btn" (click)="seleccionar(product)">
+            <button class="btn" (click)="setProductoSeleccionado(product)">
               {{ product.product }}</button
             ><span>></span></a
           >
