--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,7 +12,10 @@
 .descriptionPd {
   line-height: 1.8;
 }
-
+.favoritos {
+  background-color: rgb(255, 217, 15);
+  color: white;
+}
 #ImageSim {
   height: 200px;
   width: 200px;
