--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,41 +17,11 @@
           [productosFiltrado]="productoFiltrado"
           (delete)="eliminar($event)"
           (fav)="favoritos()"
+          (productModal)="infoModal($event)"
         ></app-main>
+        <app-modal [productModal]="dataModal"></app-modal>
       </div>
       <!-- Modal -->
-      <div
-        class="modal fade"
-        id="similarModal"
-        tabindex="-1"
-        aria-labelledby="similarModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5
-                class="modal-titles"
-                *ngFor="let similarProducts of pSeleccion.similarProducts"
-              >
-                {{ similarProducts.product }}
-              </h5>
-            </div>
-            <div class="modal-body">
-              <img class="w-100" src="" alt="foto" />
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Cerrar
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </body>
