--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,3 @@
-<body>
-  <app-nav></app-nav>
-  <div class="centro">
-    <!--Aside-->
-    <app-aside
-      [pSeleccion]="pSeleccion"
-      [productosFiltrado]="productoFiltrado"
-      (reset)="reset()"
-      (filtrado)="filtrarNombre($event)"
-      (seleccionarProducto)="seleccionarProducto($event)"
-    ></app-aside>
-    <!--seccion derecha  producto seleccionado -->
-    <div class="container-fluid" id="pSelec">
-      <div class="row">
-        <app-main
-          [pSeleccion]="pSeleccion"
-          [productosFiltrado]="productoFiltrado"
-          (delete)="eliminar($event)"
-          (fav)="favoritos()"
-          (productModal)="infoModal($event)"
-        ></app-main>
-        <app-modal [productModal]="dataModal"></app-modal>
-      </div>
-      <!-- Modal -->
-    </div>
-  </div>
-</body>
+<app-nav></app-nav>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
