--- a/src/app/modules/productos/nav/nav.component.html
+++ b/src/app/modules/productos/nav/nav.component.html
@@ -9,10 +9,12 @@
   <div class="navbar-collapse">
     <ul class="navbar-nav ms-auto">
       <li class="nav-item p-2 border-end">
-        <a class="nav-link active" id="navlink" href="#">Home</a>
+        <a routerLink="/productos" class="nav-link active" id="navlink" href="#"
+          >Home</a
+        >
       </li>
       <li class="nav-item p-2 border-end">
-        <a class="nav-link" href="#">About</a>
+        <a routerLink="/about" class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item p-2 border-end">
         <a class="nav-link" href="#">Shop</a>
