proyecto 4 acabado+bonus1

--- a/src/app/modules/productos/general/general.component.html
+++ b/src/app/modules/productos/general/general.component.html
@@ -14,7 +14,7 @@
         <app-main
           [pSeleccion]="pSeleccion"
           [productosFiltrado]="productoFiltrado"
-          (delete)="eliminar($event)"
+          (delete)="eliminar()"
           (fav)="favoritos()"
           (productModal)="infoModal($event)"
         ></app-main>
