--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,17 @@
-<footer>
-  <div class="border-top"></div>
-  <a>FOOOOOOOOOOOOOOOOOOOOOOOOOOOOOTERRRRRRRRRRRRRRRRRRRR</a>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Copyright -->
+
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Sprinfield</a>
+    <img
+      class="navbar-brand mx-5"
+      id="logo"
+      src="./assets/images/2proyecto/logo.png"
+      alt=""
+    />
+  </div>
+  <!-- Copyright -->
 </footer>
+<!-- Footer -->
