--- a/src/app/modules/productos/main/main.component.scss
+++ b/src/app/modules/productos/main/main.component.scss
@@ -13,8 +13,8 @@
   line-height: 1.8;
 }
 .favoritos {
-  background-color: rgb(255, 217, 15);
-  color: white;
+  background-color: rgba(255, 219, 15, 0.628);
+  color: rgb(0, 50, 62);
 }
 #ImageSim {
   height: 200px;
