--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,10 +17,10 @@
         <a routerLink="/about" class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item p-2 border-end">
-        <a class="nav-link" href="#">Shop</a>
+        <a routerLink="/shop" class="nav-link" href="#">Shop</a>
       </li>
       <li class="nav-item p-2">
-        <a class="nav-link" href="#">Help</a>
+        <a routerLink="/shop" class="nav-link" href="#">Help</a>
       </li>
       <li class="nav-item py-3 mx-4">
         <button class="bg-secondary text-white">Your Cart</button>
